--- a/tutorials/basics/0_data_ingestion.ipynb
+++ b/tutorials/basics/0_data_ingestion.ipynb
@@ -21,16 +21,13 @@
    "id": "df1ecc9a-f9b7-4477-9a17-d92e9651efed",
    "metadata": {},
    "source": [
-    "1. First you need a running TigerGraph database. See the [docs](https://docs.tigergraph.com/tigergraph-server/current/getting-started/docker) to start a TigerGraph database quickly. [tgcloud.io](https://tgcloud.io/) is not supported by the ML workbench for now, so the database has to be run on a on-prem server.\n",
-    "2. SSH into the database server as a database user. If the database is running in a docker container, SSH into the container. \n",
-    "3. On the server terminal, download the following files using tools such as `wget`\n",
-    "   - Vertices: `wget https://tigergraph-public-data.s3.us-west-1.amazonaws.com/Cora/nodes.csv`\n",
-    "   - Edges: `wget https://tigergraph-public-data.s3.us-west-1.amazonaws.com/Cora/edges.csv`\n",
-    "   - GSQL script for loading data: `wget https://tigergraph-public-data.s3.us-west-1.amazonaws.com/Cora/ingest.gsql`\n",
-    "4. Open the script `ingest.gsql` with any text editor such as `vim` or `emacs`, and modify lines 11 and 12 to point to the two csv files you just downloaded.\n",
-    "5. [Optional] If there is already a graph in your database, you might want to back it up, and then drop everything for a fresh start.\n",
-    "6. Run the GSQL script: `gsql ingest.gsql`, and wait for it to finish.\n",
-    "7. To verify that data ingestion is sucessful, open GraphStudio in your browser at `http://<server_ip>:14240/` and select `Cora` for the graph. You should be able to see\n",
+    "1. First you need a running TigerGraph database. See the [docs](https://docs.tigergraph.com/tigergraph-server/current/getting-started/docker) to start a TigerGraph database quickly. [tgcloud.io](https://tgcloud.io/) is not supported by the ML workbench for now, because you need SSH access to the database machine to install a component of the workbench.\n",
+    "1. SSH into the database server as a database user. If the database is running in a docker container, SSH into the container. \n",
+    "1. On the server terminal, create a folder to store the raw data: `mkdir -p ~/Data/Cora && cd ~/Data/Cora`. \n",
+    "1. Download the shell script that ingests data: `wget https://tigergraph-public-data.s3.us-west-1.amazonaws.com/Cora/ingest.sh`.\n",
+    "1. [Optional] If there is already a graph in your database, you might want to back it up, and then drop everything for a fresh start.\n",
+    "1. Run the shell script to ingest data: `./ingest.sh`, and wait for it to finish.\n",
+    "1. To verify that the ingestion is sucessful, open GraphStudio in your browser at `http://<server_ip>:14240/` and select `Cora` for the graph. You should be able to see\n",
     "   - Graph schema and loading results in the `Load Data` section.\n",
     "   - Some randomly picked vertices in the `Explore Graph` section after you click the `Pick vertices` button."
    ]
