fix: screenshot not attached

--- a/tutorials/basics/3.1_graph_convolutional_network.ipynb
+++ b/tutorials/basics/3.1_graph_convolutional_network.ipynb
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing the graph. It might take a minute if this is the first time you run it.\n"
+     ]
+    }
+   ],
    "source": [
     "from tgml.data import TigerGraph\n",
     "\n",
@@ -67,9 +75,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using graph 'Cora'\n",
+      "---- Graph Cora\n",
+      "Vertex Types: \n",
+      "  - VERTEX Paper(PRIMARY_ID id INT, x LIST<INT>, y INT, train_mask BOOL, val_mask BOOL, test_mask BOOL, tmp_id INT, tmp_id2 INT, tmp_id3 INT) WITH STATS=\"OUTDEGREE_BY_EDGETYPE\", PRIMARY_ID_AS_ATTRIBUTE=\"true\"\n",
+      "Edge Types: \n",
+      "  - DIRECTED EDGE Cite(FROM Paper, TO Paper)\n",
+      "\n",
+      "Graphs: \n",
+      "  - Graph Cora(Paper:v, Cite:e)\n",
+      "Jobs: \n",
+      "Queries: \n",
+      "  - export_edge(string output_path) (installed v2)\n",
+      "  - export_vertex_x_y_train_mask_val_mask_test_mask(string output_path) (installed v2)\n",
+      "  - get_vertex_number(string v_type, string filter_by) (installed v2)\n",
+      "  - shuffle_vertices(string tmp_id) (installed v2)\n",
+      "  - tg_neighbor_sampler_x(set<vertex> input_vertices, string vertex_filename, string edge_filename, int batch_id, int num_batches, int num_neighbors, int num_hops, string filter_by, string tmp_id) (installed v2)\n",
+      "  - tg_neighbor_sampler_x_y_train_mask_val_mask_test_mask(set<vertex> input_vertices, string vertex_filename, string edge_filename, int batch_id, int num_batches, int num_neighbors, int num_hops, string filter_by, string tmp_id) (installed v2)\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Basic metadata about the graph such as schema.\n",
     "tgraph.info()"
@@ -77,18 +113,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2708"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tgraph.number_of_vertices()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10556"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tgraph.number_of_edges()"
    ]
@@ -102,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of vertices in training set: 140\n",
+      "Number of vertices in validation set: 500\n",
+      "Number of vertices in test set: 1000\n"
+     ]
+    }
+   ],
    "source": [
     "print(\n",
     "    \"Number of vertices in training set:\",\n",
@@ -143,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,9 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing and optimizing queries. It might take a minute if this is the first time you use this loader.\n"
+     ]
+    }
+   ],
    "source": [
     "from tgml.dataloaders import GraphLoader\n",
     "\n",
@@ -184,9 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(edge_index=[2, 21112], x=[2708, 1433], y=[2708], train_mask=[2708], val_mask=[2708], test_mask=[2708])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the whole graph from the loader in PyG format\n",
     "data = graph_loader.data\n",
@@ -210,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,9 +348,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 00, Train Loss: 1.9464, Valid Loss: 1.9526, Train Accuracy: 0.1500, Valid Accuracy: 0.1380\n",
+      "Epoch: 01, Train Loss: 1.7140, Valid Loss: 1.8187, Train Accuracy: 0.8571, Valid Accuracy: 0.5900\n",
+      "Epoch: 02, Train Loss: 1.4271, Valid Loss: 1.6734, Train Accuracy: 0.9000, Valid Accuracy: 0.6380\n",
+      "Epoch: 03, Train Loss: 1.1635, Valid Loss: 1.5175, Train Accuracy: 0.9071, Valid Accuracy: 0.6900\n",
+      "Epoch: 04, Train Loss: 0.8925, Valid Loss: 1.3266, Train Accuracy: 0.9714, Valid Accuracy: 0.7380\n",
+      "Epoch: 05, Train Loss: 0.6939, Valid Loss: 1.1953, Train Accuracy: 0.9286, Valid Accuracy: 0.7360\n",
+      "Epoch: 06, Train Loss: 0.5294, Valid Loss: 1.0712, Train Accuracy: 0.9643, Valid Accuracy: 0.7460\n",
+      "Epoch: 07, Train Loss: 0.3863, Valid Loss: 1.0118, Train Accuracy: 0.9500, Valid Accuracy: 0.7380\n",
+      "Epoch: 08, Train Loss: 0.2777, Valid Loss: 0.9150, Train Accuracy: 0.9786, Valid Accuracy: 0.7240\n",
+      "Epoch: 09, Train Loss: 0.2320, Valid Loss: 0.8724, Train Accuracy: 0.9786, Valid Accuracy: 0.7400\n",
+      "Epoch: 10, Train Loss: 0.1800, Valid Loss: 0.8337, Train Accuracy: 0.9857, Valid Accuracy: 0.7640\n",
+      "Epoch: 11, Train Loss: 0.1443, Valid Loss: 0.8218, Train Accuracy: 0.9929, Valid Accuracy: 0.7660\n",
+      "Epoch: 12, Train Loss: 0.0990, Valid Loss: 0.8162, Train Accuracy: 0.9857, Valid Accuracy: 0.7500\n",
+      "Epoch: 13, Train Loss: 0.0968, Valid Loss: 0.7847, Train Accuracy: 1.0000, Valid Accuracy: 0.7640\n",
+      "Epoch: 14, Train Loss: 0.0807, Valid Loss: 0.7561, Train Accuracy: 0.9929, Valid Accuracy: 0.7600\n",
+      "Epoch: 15, Train Loss: 0.0605, Valid Loss: 0.7912, Train Accuracy: 1.0000, Valid Accuracy: 0.7640\n",
+      "Epoch: 16, Train Loss: 0.0368, Valid Loss: 0.8272, Train Accuracy: 1.0000, Valid Accuracy: 0.7540\n",
+      "Epoch: 17, Train Loss: 0.0296, Valid Loss: 0.8375, Train Accuracy: 1.0000, Valid Accuracy: 0.7460\n",
+      "Epoch: 18, Train Loss: 0.0224, Valid Loss: 0.8372, Train Accuracy: 1.0000, Valid Accuracy: 0.7580\n",
+      "Epoch: 19, Train Loss: 0.0254, Valid Loss: 0.8096, Train Accuracy: 1.0000, Valid Accuracy: 0.7760\n"
+     ]
+    }
+   ],
    "source": [
     "log_dir = \"logs/cora/gcn/wholegraph/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "tb_log = SummaryWriter(log_dir)\n",
@@ -318,9 +432,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow installation not found - running with reduced feature set.\n",
+      "\n",
+      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
+      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
+      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+      "\n",
+      "E0210 05:48:48.563298 140369580668736 program.py:298] TensorBoard could not bind to port 6006, it was already in use\n",
+      "ERROR: TensorBoard could not bind to port 6006, it was already in use\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.system(\"tensorboard --logdir logs --port 6006 --bind_all &\")"
@@ -354,9 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7870\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "acc = Accuracy()\n",
@@ -378,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,9 +558,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing and optimizing queries. It might take a minute if this is the first time you use this loader.\n"
+     ]
+    }
+   ],
    "source": [
     "train_loader = NeighborLoader(\n",
     "    graph=tgraph,\n",
@@ -432,9 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing and optimizing queries. It might take a minute if this is the first time you use this loader.\n"
+     ]
+    }
+   ],
    "source": [
     "valid_loader = NeighborLoader(\n",
     "    graph=tgraph,\n",
@@ -453,9 +616,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing and optimizing queries. It might take a minute if this is the first time you use this loader.\n"
+     ]
+    }
+   ],
    "source": [
     "test_loader = NeighborLoader(\n",
     "    graph=tgraph,\n",
@@ -488,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,9 +710,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Train Batch 0, Loss 1.9731, Accuracy 0.1102\n",
+      "Epoch 0, Train Batch 1, Loss 1.9015, Accuracy 0.3012\n",
+      "Epoch 0, Train Batch 2, Loss 1.8334, Accuracy 0.4409\n",
+      "Epoch 0, Valid Loss 1.7449, Valid Accuracy 0.5786\n",
+      "Epoch 1, Train Batch 0, Loss 1.3512, Accuracy 0.9037\n",
+      "Epoch 1, Train Batch 1, Loss 1.2911, Accuracy 0.8800\n",
+      "Epoch 1, Train Batch 2, Loss 1.1724, Accuracy 0.8960\n",
+      "Epoch 1, Valid Loss 1.3914, Valid Accuracy 0.6853\n",
+      "Epoch 2, Train Batch 0, Loss 0.7360, Accuracy 0.9577\n",
+      "Epoch 2, Train Batch 1, Loss 0.7126, Accuracy 0.9342\n",
+      "Epoch 2, Train Batch 2, Loss 0.6422, Accuracy 0.9307\n",
+      "Epoch 2, Valid Loss 1.0601, Valid Accuracy 0.7437\n",
+      "Epoch 3, Train Batch 0, Loss 0.4014, Accuracy 0.9714\n",
+      "Epoch 3, Train Batch 1, Loss 0.3278, Accuracy 0.9802\n",
+      "Epoch 3, Train Batch 2, Loss 0.3088, Accuracy 0.9651\n",
+      "Epoch 3, Valid Loss 0.9021, Valid Accuracy 0.7467\n",
+      "Epoch 4, Train Batch 0, Loss 0.2087, Accuracy 0.9667\n",
+      "Epoch 4, Train Batch 1, Loss 0.1655, Accuracy 0.9711\n",
+      "Epoch 4, Train Batch 2, Loss 0.1758, Accuracy 0.9734\n",
+      "Epoch 4, Valid Loss 0.8668, Valid Accuracy 0.7376\n",
+      "Epoch 5, Train Batch 0, Loss 0.2149, Accuracy 0.9225\n",
+      "Epoch 5, Train Batch 1, Loss 0.1683, Accuracy 0.9398\n",
+      "Epoch 5, Train Batch 2, Loss 0.1593, Accuracy 0.9430\n",
+      "Epoch 5, Valid Loss 0.8868, Valid Accuracy 0.7254\n",
+      "Epoch 6, Train Batch 0, Loss 0.1043, Accuracy 0.9760\n",
+      "Epoch 6, Train Batch 1, Loss 0.1117, Accuracy 0.9701\n",
+      "Epoch 6, Train Batch 2, Loss 0.0927, Accuracy 0.9736\n",
+      "Epoch 6, Valid Loss 0.9107, Valid Accuracy 0.7264\n",
+      "Epoch 7, Train Batch 0, Loss 0.0627, Accuracy 0.9852\n",
+      "Epoch 7, Train Batch 1, Loss 0.1191, Accuracy 0.9673\n",
+      "Epoch 7, Train Batch 2, Loss 0.1097, Accuracy 0.9604\n",
+      "Epoch 7, Valid Loss 0.9238, Valid Accuracy 0.7242\n",
+      "Epoch 8, Train Batch 0, Loss 0.0588, Accuracy 0.9795\n",
+      "Epoch 8, Train Batch 1, Loss 0.0464, Accuracy 0.9829\n",
+      "Epoch 8, Train Batch 2, Loss 0.0549, Accuracy 0.9764\n",
+      "Epoch 8, Valid Loss 0.9473, Valid Accuracy 0.7138\n",
+      "Epoch 9, Train Batch 0, Loss 0.1158, Accuracy 0.9606\n",
+      "Epoch 9, Train Batch 1, Loss 0.0668, Accuracy 0.9754\n",
+      "Epoch 9, Train Batch 2, Loss 0.0684, Accuracy 0.9704\n",
+      "Epoch 9, Valid Loss 0.9543, Valid Accuracy 0.7168\n"
+     ]
+    }
+   ],
    "source": [
     "log_dir = \"logs/cora/gcn/subgraph/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "train_log = SummaryWriter(log_dir+\"/train\")\n",
@@ -622,9 +840,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow installation not found - running with reduced feature set.\n",
+      "\n",
+      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
+      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
+      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+      "\n",
+      "E0210 05:51:06.962246 139909580437312 program.py:298] TensorBoard could not bind to port 6006, it was already in use\n",
+      "ERROR: TensorBoard could not bind to port 6006, it was already in use\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.system(\"tensorboard --logdir logs --port 6006 --bind_all &\")"
@@ -658,9 +901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7553\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "acc = Accuracy()\n",
@@ -683,9 +934,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing and optimizing queries. It might take a minute if this is the first time you use this loader.\n"
+     ]
+    }
+   ],
    "source": [
     "infer_loader = NeighborLoader(\n",
     "    graph=tgraph,\n",
@@ -699,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,9 +982,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(edge_index=[2, 34], x=[18, 1433], primary_id=[18])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The returned data are the neighborhood subgraphs of the input nodes.\n",
     "# The original IDs of the nodes in the subgraphs are stored in the \n",
@@ -735,9 +1005,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: Label\n",
+      "999:2\n",
+      "7:3\n",
+      "1358:2\n",
+      "346:2\n",
+      "208:3\n",
+      "1189:2\n",
+      "1358:2\n",
+      "501:2\n",
+      "1721:2\n",
+      "999:2\n",
+      "757:2\n",
+      "1747:2\n",
+      "1499:2\n",
+      "1724:2\n",
+      "689:2\n",
+      "1749:2\n",
+      "154:2\n",
+      "7:3\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict. Predictions for both the input nodes and others in their \n",
     "# neighborhoods are generated.\n",
