--- a/tutorials/basics/0_data_ingestion.ipynb
+++ b/tutorials/basics/0_data_ingestion.ipynb
@@ -24,21 +24,13 @@
     "1. First you need a running TigerGraph database. See the [docs](https://docs.tigergraph.com/tigergraph-server/current/getting-started/docker) to start a TigerGraph database quickly. [tgcloud.io](https://tgcloud.io/) is not supported by the ML workbench for now, because you need SSH access to the database machine to install a component of the workbench.\n",
     "1. SSH into the database server as a database user. If the database is running in a docker container, SSH into the container. \n",
     "1. On the server terminal, create a folder to store the raw data: `mkdir -p ~/Data/Cora && cd ~/Data/Cora`. \n",
-    "1. Download the shell script that ingests data: `wget https://tigergraph-public-data.s3.us-west-1.amazonaws.com/Cora/ingest.sh`.\n",
+    "1. Download the shell script that ingests data: `wget --no-check-certificate https://tigergraph-public-data.s3.us-west-1.amazonaws.com/Cora/ingest.sh`.\n",
     "1. [Optional] If there is already a graph in your database, you might want to back it up, and then drop everything for a fresh start.\n",
-    "1. Run the shell script to ingest data: `./ingest.sh`, and wait for it to finish.\n",
+    "1. Run the shell script to ingest data: `bash ingest.sh`, and wait for it to finish.\n",
     "1. To verify that the ingestion is sucessful, open GraphStudio in your browser at `http://<server_ip>:14240/` and select `Cora` for the graph. You should be able to see\n",
     "   - Graph schema and loading results in the `Load Data` section.\n",
     "   - Some randomly picked vertices in the `Explore Graph` section after you click the `Pick vertices` button."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bab3bb0-e0ac-424a-8fe7-c48c0ab11de7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
